# caft-agent-monitor

./: .gitignore  README.md  pyproject.toml
agentdiag/: __init__.py  __main__.py  annotation.py  annotation_models.py  annotation_store.py  audit_pdf.py  audit_report.py  auto_annotate.py  auto_annotate_prompt.py  baseline.py  baselines.py  cognitive.py  compositor.py  contract_monitor.py  coordination.py  decision_trace.py  demo.py  disagreement.py  evaluate.py  evidence.py  harness.py  hta.py  live.py  loading.py  mcp_server.py  metrics.py  models.py  monitor.py  observable.py  pilot.py  plugin.py  splits.py  status_engine.py  synthetic.py  tui.py  universal_monitor.py  validation.jsonl  validation_log.py  visualize.py
dashboard/: package-lock.json  package.json
demo/: README.md  build_trajectory_demo.py  index.html
docs/: ADDING_AN_ADAPTER.md  ANNOTATION_PIPELINE.md  ARCHITECTURE.md  CAFT_taxonomy.md  CONSTRUCT_REVISION.md  CORPUS_SCOPING.md  EVALUATION_PLAN.md  FACE_VALIDITY_REPORT.md  PAPER_OUTLINE.md  PILOT_PREREGISTRATION.md  PREREG_AGENT_NATIVE_TAC.md  PREREG_GENERALIZATION_G.md  PREREG_LEG2_WORKLOAD.md  PREREG_LEG3_SA.md  PREREG_LEG4_ERROR_RECOVERY.md  PROGRAM.md  PROJECT_SNAPSHOT.html  VALIDATION_METHODOLOGY.md  decision_architecture.md
scripts/: analyze_traces.py  annotate_30_traces.py  build_annotations.py  build_eval_dataset.py  build_pixel_sprites.py  clean_annotations.py  compare_validation.py  deep_analyze.py  demo_e2e.py  diagnose_stall.py  evaluate_ground_truth.py  evaluate_modes.py  extract_trace_info.py  full_trace_analyzer.py  generate_v13_prompts.py  poc_premature_termination.py  run_ablation.py  run_confirmation.py
(+1222 files in other folders)
